testsuite/tests/rename/should_fail/T26545.stderr
T26545.hs:12:23: error: [GHC-88431]
    ‘v’ is used in a static form but it is not defined at top level

